# grpo

./: README.md  hello.py  pyproject.toml  qwen2.5_3b_grpo.ipynb  shell.nix  test.py  train.py
unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothDDPOTrainer.py
