[project]
name = "unsloth-grpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.45.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "math-verify[antlr4-13-2]>=0.7.0",
    "pylatexenc==2.10",
    "torch==2.6",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "triton>=3.1.0",
    "unsloth[flashattention,huggingface]",
    "vllm>=0.8.2",
]

[tool.uv.sources]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }

[tool.uv]
no-build-isolation-package = ["flash-attn"]